# dex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  notes.txt  setUp.ps1
dependencies/glm/glm/: common.hpp  exponential.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
dependencies/glm/glm/detail/: _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  glm.cpp  qualifier.hpp  setup.hpp  type_float.hpp  type_half.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  (+5 more)
dependencies/stb/: stb_c_lexer.h  stb_connected_components.h  stb_divide.h  stb_ds.h  stb_dxt.h  stb_easy_font.h  stb_herringbone_wang_tile.h  stb_hexwave.h  stb_image.h  stb_image_resize2.h  stb_image_write.h  stb_include.h  stb_leakcheck.h  stb_perlin.h  stb_rect_pack.h  stb_sprintf.h  stb_textedit.h  stb_tilemap_editor.h  stb_truetype.h  stb_voxel_render.h
dependencies/stb/deprecated/: rrsprintf.h  stb.h  stb_image_resize.h  stretchy_buffer.h
dependencies/stb/stb_image_resize_test/: old_image_resize.h
dependencies/stb/tests/: resample_test.cpp  stb_c_lexer_fuzzer.cpp  stb_cpp.cpp  test_cpp_compilation.cpp  test_ds_cpp.cpp
include/: Cursor.h  Font.h  TextData.h  TextFrame.h  helpers.h  log.h  shader.h  texture.h
include/KHR/: khrplatform.h
include/core/: window.h
include/glad/: glad.h
include/input/: keyboard.h  mouse.h
src/: Font.cpp  TextData.cpp  TextFrame.cpp  bckup.cpp  cursor.cpp  glad.c  helpers.cpp  main.cpp  note.txt  shader.cpp  stb_impl.cpp  texture.cpp
src/core/: window.cpp
src/input/: keyboard.cpp  mouse.cpp
src/shaders/: CursorFragmentShader.glsl  CursorVertexShader.glsl  FontFragmentShader.glsl  FontVertex.glsl  simpleFragmentShader.glsl
(+390 files in other folders)
